--- a/instagram/templates/instagram/base.html
+++ b/instagram/templates/instagram/base.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" id='name' >Navbar</a>
+          <a class="navbar-brand" id='name'>Instagram</a>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
