--- a/instagram/templates/instagram/index.html
+++ b/instagram/templates/instagram/index.html
@@ -1,5 +1,12 @@
 {% extends 'instagram/base.html' %}
 
 {% block content%}
-
+<div class="container">
+    <div class="card" style="width: 40rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
